# HydraDragonFirewall

./: .gitignore  README.md
.github/: dependabot.yml
HydraDragonClient/HydraDragonClient/: HydraDragonClient.csproj  MainForm.cs
HydraDragonClient/HydraDragonClient/Client/: RemoteClient.cs
HydraDragonClient/HydraDragonClient/Protocol/: Messages.cs
HydraDragonClient/HydraDragonClient/Remote/: RemoteServer.cs
HydraDragonClient/HydraDragonClient/UI/: ConnectDialog.cs  ConsentDialog.cs
hydradragonfirewall/: Cargo.toml  build.ps1  build.rs  check_error.txt  check_error_clean.txt  hydradragonfirewall.exe.manifest  resource.rc  settings.json  tauri.conf.json
hydradragonfirewall/.cargo/: config.toml
hydradragonfirewall/capabilities/: default.json
hydradragonfirewall/hook_dll/: Cargo.toml
hydradragonfirewall/hook_dll/src/: lib.rs
hydradragonfirewall/src/: engine.rs  http_parser.rs  injector.rs  lib.rs  main.rs  sdk.rs  tls_parser.rs  web_filter.rs  windivert_api.rs
hydradragonfirewall/src-tauri/: Cargo.toml  app.manifest  build.rs  build_errors.txt  full_errors.txt  tauri.conf.json
hydradragonfirewall/src-tauri/.cargo/: config.toml
hydradragonfirewall/src-tauri/src/: engine.rs  injector.rs  lib.rs  main.rs  size_check.rs  web_filter.rs
hydradragonfirewall/ui/: Cargo.toml  style.css
hydradragonfirewall/ui/src/: main.rs
hydradragonfirewalldrv/: Cargo.toml  ldrv_wildcard.txt
hydradragonfirewalldrv/src/: lib.rs
setup/: setup.bat
windivert-rust-master/windivert-sys/: vc140.idb
