[package]
name = "hydradragonfirewall"
version = "0.1.0"
edition = "2024"

[dependencies]
windivert = { version = "0.6.0", features = ["vendored"] }
eframe = "0.33.3"
egui = "0.33.3"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
glob = "0.3"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }