[package]
name = "hydradragonfirewall"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.0-rc-13", features = [] }
embed-resource = "3.0.6"

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon"] }
windivert = { path = "../windivert-rust-master/windivert", features = ["vendored"] }

csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bs58 = "0.5"
base64 = "0.22"
regex = "1.12"
lazy_static = "1.4"
glob = "0.3"
crossbeam-channel = "0.5"
mitmproxy = { git = "https://github.com/mitmproxy/mitmproxy_rs", package = "mitmproxy", tag = "v0.12.9" }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_IO",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
url = "2.5.8"

[patch.crates-io]
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "2f3c85f5c4a601018c10b464b1ca890d9504bf6e" }
