[package]
name = "hook_dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
minhook = "0.4.1"
lazy_static = "1.4"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Security",
] }
