[package]
name = "hydradragonfirewall"
version = "0.1.0"
description = "HydraDragon Firewall"
authors = ["Emirhan Ucan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Porting existing dependencies
windivert = "0.6.0"
csv = "1.3"
regex = "1.10"
lazy_static = "1.4"
glob = "0.3"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
